Deleted spec files

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ Thumbs.db
 .vs/Mobile_Phone-app/FileContentIndex/5ac0969a-43f5-4e60-bdb1-d4b1f7b9615c.vsidx
 .vs/Mobile_Phone-app/FileContentIndex/c423d19c-ddf2-4471-80ab-0031bd38ec0c.vsidx
 .vs/Mobile_Phone-app/FileContentIndex/read.lock
+.vs/VSWorkspaceState.json
+.vs/Mobile_Phone-app/FileContentIndex/225fa7ca-f377-4b3c-a7b8-971dc0230286.vsidx
+.vs/Mobile_Phone-app/v17/.suo
+.vs/
